# Unlearning-in-Offline-RL

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/env/: halfcheetah_m.yaml  halfcheetah_me.yaml  halfcheetah_mr.yaml  hopper_m.yaml  hopper_me.yaml  hopper_mr.yaml  walker2d_m.yaml  walker2d_me.yaml  walker2d_mr.yaml
configs/model/: dt.yaml  lstm.yaml  mlp.yaml
configs/train/: default.yaml  tiny.yaml
configs/unlearn/: default.yaml  trajdeleter.yaml
figures/: gen_fig2_heatmap.py  gen_tables_main.py  paper_plot_style.py  table_utils.py
scripts/: analyze_b1_b4_multiseed.py  analyze_b6_matched_budget.py  analyze_multi_attack.py  analyze_selective_results.py  analyze_selective_utility_budget.py  build_benchmark_audit.py  build_negative_set.py  download_data.py  evaluate_tmi.py  run_backbone_comparison.py  run_gold_standard.py  run_layer_selection_cv.py  run_main_reproduction.py  run_naive_ft.py  run_release_smoke.py  run_selective_unlearning.py  run_trajdeleter_unlearning.py  run_unlearning.py  train_base_dt.py
src/: antmaze_utils.py  data_pipeline.py  dataset.py  decision_transformer.py  env_utils.py  experiment_contract.py  experiment_validator.py  lstm_policy.py  matching.py  mlp.py  model_factory.py  nll.py  retain_checks.py  run_identity.py  tmi.py  tmi_multi_attack.py  trainer.py  unlearning.py
