[project]
name = "TOUR"
version = "0.1.0"
description = "Reproducibility release for the TOUR benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[mujoco]>=1.2.3",
    "h5py>=3.16.0",
    "hydra-core>=1.3.2",
    "numpy>=2.4.3",
    "scipy>=1.14.0",
    "scikit-learn>=1.8.0",
    "torch>=2.2",
    "wandb>=0.25.1",
    "omegaconf>=2.3.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.9.0",
    "pytest-xdist>=3.8.0",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
